Requires:
~~~~~~~~~
-
New features:
~~~~~~~~~~~~~
- adding the possibility to upload a zip archive of images directly in a
  gallery
Bug fixes:
~~~~~~~~~~
- the title and post url in metafactory used to be non configurable
New internal features:
~~~~~~~~~~~~~~~~~~~~~~
-