@@ -3,6 +3,7 @@ Requires:
 -
 New features:
 ~~~~~~~~~~~~~
+- External method to replay meta_profiles
 - adding the possibility to upload a zip archive of images directly in a
   gallery
 Bug fixes:
